# risiko-engine

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-ci.yml
BuckShot/GameConstant/: bullet.py  game_state.py  usable_entity.py
BuckShot/GameLogic/State/: __init__.py  (+2 more)
GameEngine/GameConstant/: bullet.py  item_type.py
GameEngine/GameException/: effect_exception.py
GameEngine/GameLogic/: state.py
Game_Mechanics/GameObjects/: Effect.py  Inventory.py  Item.py  Player.py  Shotgun.py
risiko/: __init__.py  engine.py
risiko/constants/: game_state.py
risiko/core/: __init__.py  effect.py  effect_handler.py  inventory.py  item.py  magazine.py  player.py  shell.py  shotgun.py
risiko/exception/: inventory_exception.py
risiko/handler/: __init__.py  round_manager.py  state_machine.py  turn_handler.py
risiko/handlers/: round_handler.py  state_transitions.py
risiko/managers/: __init__.py  snapshot.py  state_machine.py  turn_manager.py
risiko/objects/: custom_player.py
risiko/snapshot/: __init__.py  game_snapshot.py  player_snapshot.py  shotgun_snapshot.py
src/engine/: __init__.py
src/risiko/: __init__.py  engine.py  event.py  exception.py  sessions.py
src/shiro/: interface.py
tests/: test_action_processor.py  test_game.py  test_helper.py  test_interfaces.py  test_magazine.py  test_magazine_processor.py  test_magazine_processors.py  test_player.py  test_player_management_processor.py  test_player_manager.py  test_player_state_processor.py  test_risiko_state.py  test_shell.py  test_shotgun.py  test_weapon_processor.py
(+244 files in other folders)
