[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risiko-engine"
version = "1.0.0"
authors = [
  { name = "Kodutzu", email = "Kodutzu@gmail.com" },
]
description = "A Stateless Russian Roulette Python Engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs"
]

[project.urls]
Homepage = "https://github.com/Kodutzu/risiko-engine"
"Bug Tracker" = "https://github.com/Kodutzu/risiko-engine/issues"

[tool.setuptools.packages.find]
where = ["src"]

# --- Ruff configuration ---
[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), isort (I), and pyupgrade (UP) rules.
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.format]
# Enable ruff's formatter, which is a drop-in replacement for Black.